// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> 5개의 메뉴를 가진다 1`] = `
.c0 {
  margin-bottom: -0.0625rem;
  border-right: 0.0625rem solid;
  border-bottom: 0.0625rem solid;
  border-radius: 0;
}

.c0:first-child {
  border-left: 0.0625rem solid;
}

<IconButton
  className="c0"
  href="/"
  icon="home"
  location="/"
/>
`;

exports[`<Header /> 5개의 메뉴를 가진다 2`] = `
.c0 {
  margin-bottom: -0.0625rem;
  border-right: 0.0625rem solid;
  border-bottom: 0.0625rem solid;
  border-radius: 0;
}

.c0:first-child {
  border-left: 0.0625rem solid;
}

<IconButton
  className="c0"
  href="/auth"
  icon="user"
  location="/"
/>
`;

exports[`<Header /> 정상적으로 렌더링된다 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin: 0 -0.0625rem;
  border-bottom: 0.0625rem solid;
}

<div
  className="c0"
>
  <LeftMenu>
    <StyledIconButton
      href="/"
      icon="home"
      location="/"
    />
    <StyledIconButton
      href="/ranking"
      icon="trophy"
      location="/"
    />
    <StyledIconButton
      href="/bookmarks"
      icon="star"
      location="/"
    />
    <StyledIconButton
      href="/community"
      icon="comments"
      location="/"
    />
  </LeftMenu>
  <RightMenu>
    <StyledIconButton
      href="/auth"
      icon="user"
      location="/"
    />
  </RightMenu>
</div>
`;

exports[`<Header /> 커뮤니티 메뉴가 선택되어 있다 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin: 0 -0.0625rem;
  border-bottom: 0.0625rem solid;
}

<div
  className="c0"
>
  <LeftMenu>
    <StyledIconButton
      href="/"
      icon="home"
      location="/community"
    />
    <StyledIconButton
      href="/ranking"
      icon="trophy"
      location="/community"
    />
    <StyledIconButton
      href="/bookmarks"
      icon="star"
      location="/community"
    />
    <StyledIconButton
      href="/community"
      icon="comments"
      location="/community"
    />
  </LeftMenu>
  <RightMenu>
    <StyledIconButton
      href="/auth"
      icon="user"
      location="/community"
    />
  </RightMenu>
</div>
`;
